force-app/main/default/objects/Contract/fields/Area_Acres__c.field-meta.xml
<CustomField>
    <fullName>Area_Acres__c</fullName>
    <label>Area Acres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>