force-app/main/default/objects/Contract/fields/Discount_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Discount_Estimated_Cost__c</fullName>
    <label>Discount Estimated Cost</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>