force-app/main/default/objects/Contract/fields/Foreman_Start_Job__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Start_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreman Start Job</label>
    <type>Checkbox</type>
</CustomField>