force-app/main/default/objects/Contract/fields/Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Job_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Calculates the actual total cost of the job.</description>
    <label>Job Completed</label>
    <type>Checkbox</type>
</CustomField>