force-app/main/default/objects/Contract/fields/Select_Products__c.field-meta.xml
<CustomField>
    <fullName>Select_Products__c</fullName>
    <label>Select Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blueprints</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Schematics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>