force-app/main/default/objects/Contract/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Actual total cost the customer must pay.</description>
    <label>Total Cost</label>
    <length>18</length>
    <type>Text</type>
</CustomField>